@@ -1,3 +1,8 @@
+drkns 27.06.2016 00:46:22 +0200 - build 4727
+
+1. Продолжение экспериментальных изменений в запускателе.
+   Должны лучше работать Ctrl-G и многострочные команды в User Menu.
+
 shmuel 26.06.2016 16:37:24 +0200 - build 4726
 
 1. Расширение возможностей функции Panel.SetCustomSortMode().
